Fix horizontal scrolling

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -686,7 +686,6 @@ a.learn-more-link.webconsole-learn-more-link {
 
 .webconsole-output-wrapper {
   display: flex;
-  overflow: hidden;
   flex-direction: column;
   height: 100%;
   -moz-user-focus: normal;
